--- a/platformio.ini
+++ b/platformio.ini
@@ -28,15 +28,26 @@ build_flags =
     ;-mcpu=cortex-m3
     ;-mthumb
     -I".."
-    -I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
-    -I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/CoreSupport"
-    -I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/inc"
+    ;for Linux
+    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
+    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/CoreSupport"
+    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/inc"
+    ;
+    ;for Windows 10
+    -I"C:\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x"
+    -I"C:\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\CMSIS\CM3\CoreSupport"
+    -I"C:\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc"
     -I"."
     -DSTM32F10X_MD_VL
     -DUSE_STDPERIPH_DRIVER
     -DUSE_FULL_ASSERT
-    -I"./Library/ff9/src"
-    -I"./Library"
+    ;for Linux
+    ;-I"./Library/ff9/src"
+    ;-I"./Library"
+    ;
+    ;for Windows 10
+    -I".\Library\ff9\src"
+    -I".\Library"
     -T"stm32f100.ld"
     -fmax-errors=5
 
@@ -47,4 +58,11 @@ framework           = cmsis
 src_filter          = ${common.default_src_filter}
 build_flags         = ${common.build_flags}
 
-upload_protocol     = stlink
+upload_protocol = custom
+;for linux
+;upload_command = st-flash write $SOURCE 0x08000000
+;
+;For Windows using ST-LINK_cli from STelectronics
+;upload_command = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
+;For Windows using stlink V1.6.0
+upload_command = st-flash write $SOURCE 0x08000000
