Updated Platformio.ini to not use C and home dir

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ default_envs    = disco_f100rb
 [common]
 ;default_src_filter  = +<*> -<Library/ST7735.c> -<Library/ff9/src/option/cc932.c> -<Library/ff9/src/option/cc936.c> -<Library/ff9/src/option/cc949.c>-<Library/ff9/src/option/cc950.c> -<Library/ff9/src/option/ccsbcs.c> -<Library/spi.c> -<Library/uartfc.c>
 ;-<"../../.platformio">
-default_src_filter  = +<*> -<Library>
+default_src_filter  = +<*> -<Library> -<home> -<C>
 build_flags =
     -O1
     -g
