Added BlinkingLight program

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,13 +15,21 @@
 #
 [platformio]
 src_dir         = .
-build_dir       = Demo_Build
+;for Demo
+;build_dir       = Demo_Build
+;for BlinkingLight
+build_dir       = BlinkingLight_Build
 default_envs    = disco_f100rb
 
 [common]
 ;default_src_filter  = +<*> -<Library/ST7735.c> -<Library/ff9/src/option/cc932.c> -<Library/ff9/src/option/cc936.c> -<Library/ff9/src/option/cc949.c>-<Library/ff9/src/option/cc950.c> -<Library/ff9/src/option/ccsbcs.c> -<Library/spi.c> -<Library/uartfc.c>
 ;-<"../../.platformio">
-default_src_filter  = +<*> -<Library> -<home> -<C>
+;
+;for Demo
+;default_src_filter  = +<*> -<BlinkingLight> -<Library> -<home> -<C>
+;
+;for BlingingLight
+default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C>
 build_flags =
     -O1
     -g
