--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ default_envs    = disco_f100rb
 ;
 ; two files (located outside this repository but loaded by Platformio due to framework definition) are always compiled
 ; with the ones located inside this repository:
-; file 1 (the Startup code):
+; file 1 (the Startup code, but we want to use our own Startup code file called "startup_stm32f10x.c"):
 ; startup_stm32f100xb.s --assembler code, located at: for windows: "c:\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc"
 ; startup_stm32f100xb.s --assembler code, located at: for linux: "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc"
 ; file 2:
@@ -33,10 +33,16 @@ default_envs    = disco_f100rb
 ; system_stm32f1xx.c -- c code, located at: for linux: "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates"
 ;
 ;for Demo:
-;default_src_filter  = +<*> -<BlinkingLight> -<Library> -<home> -<C>
+; for Linux:
+;default_src_filter  = +<*> -<BlinkingLight> -<Library> -<home> -<C> -<.platformio> -<../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
+; for Windows:
+;default_src_filter  = +<*> -<BlinkingLight> -<Library> -<home> -<C> -<.platformio> -<.platformio> -<..\..\..\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc\startup_stm32f100xb.s>
 ;
 ;for BlingingLight:
-default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio>
+; for Linux
+;default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio> -<../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
+; for Windows:
+default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio> -<..\..\..\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc\startup_stm32f100xb.s>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
