--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ default_envs    = disco_f100rb
 ; for Linux
 ;default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio> -<../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
 ; for Windows:
-default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio> -<..\..\..\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc\startup_stm32f100xb.s>
+default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
