--- a/platformio.ini
+++ b/platformio.ini
@@ -26,23 +26,19 @@ default_envs    = disco_f100rb
 ; two files (located outside this repository but loaded by Platformio due to framework definition) are always compiled
 ; with the ones located inside this repository:
 ; file 1 (the Startup code, but we want to use our own Startup code file called "startup_stm32f10x.c"):
+;
+; To get my startup code to run I had to create a new framework called "cmsis-gadgetangel". It is exactly like the ST's framework "cmsis" except I delete the startup_stm32f100xb.s files so that
+; the compiler would use my startup_stm32f10x.c file instead!!
+;
 ; startup_stm32f100xb.s --assembler code, located at: for windows: "c:\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc"
 ; startup_stm32f100xb.s --assembler code, located at: for linux: "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc"
-; file 2:
+;
+; file 2 this file is still used by the project:
 ; system_stm32f1xx.c -- c code, located at: for windows: "c:\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates"
 ; system_stm32f1xx.c -- c code, located at: for linux: "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates"
 ;
-;for Demo:
-; for Linux:
-;default_src_filter  = +<*> -<BlinkingLight> -<Library> -<home> -<C> -<.platformio> -<../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
-; for Windows:
-;default_src_filter  = +<*> -<BlinkingLight> -<Library> -<home> -<C> -<.platformio> -<.platformio> -<..\..\..\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc\startup_stm32f100xb.s>
-;
-;for BlingingLight:
-; for Linux
-;default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio> -<../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
-; for Windows:
-default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C>
+; for Linux and Windows:
+default_src_filter  = +<*> -<Demo> -<Library> -<home> -<C> -<.platformio>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
@@ -96,8 +92,9 @@ build_flags =
 [env:disco_f100rb]
 platform                = ststm32
 board                   = disco_f100rb
-framework               = cmsis
-;This projects link script file (.ld)
+framework               = cmsis-gadgetangel
+board_build.mcu         = stm32f100rbt6
+;This projects link script file (.ld) for STM32F100RBT6
 board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
 ;
 ;default link scripts (.ld) for this board are located here (these are just comments only, use board_build.ldscript above):
