--- a/platformio.ini
+++ b/platformio.ini
@@ -44,7 +44,7 @@ lib_deps  =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod = https://github.com/GadgetAngel/STM32F10x_StdPeriph_Lib_V3.5.0_mod.git
 lib_ignore =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod
-default_src_filter  = +<*> -<Demo> -<BlinkingLight> -<Library> +<.pio/libdeps/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod>
+default_src_filter  = +<*> -<Demo> -<BlinkingLight> -<Library> +<.pio/libdeps/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod> -<.pio/libdeps/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
