new blinking lights program

--- a/platformio.ini
+++ b/platformio.ini
@@ -111,7 +111,7 @@ board_build.mcu         = stm32f100rbt6
 lib_compat_mode         = off
 ;lib_deps = src_filter = +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc\stm32f10x_rcc.h> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc\stm32f10x_gpio.h> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\src\stm32f10x.rcc.c> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\src\stm32f10x_gpio.c>
 ;This projects link script file (.ld) for STM32F100RBT6
-;board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
+board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
 ;
 ;default link scripts (.ld) for this board are located here (these are just comments only, use board_build.ldscript above):
 ; for Linux:
