--- a/platformio.ini
+++ b/platformio.ini
@@ -20,31 +20,12 @@ build_dir       = Blinking_Light2_Build
 default_envs    = disco_f100rb
 
 [common]
-; Scratch pad (this is just my space for extra stuff, ignore it)
-;default_src_filter  = +<*> -<Library/ST7735.c> -<Library/ff9/src/option/cc932.c> -<Library/ff9/src/option/cc936.c> -<Library/ff9/src/option/cc949.c>-<Library/ff9/src/option/cc950.c> -<Library/ff9/src/option/ccsbcs.c> -<Library/spi.c> -<Library/uartfc.c>
-;-<"../../.platformio">
-; end of Scratch pad
-;
-; two files (located outside this repository but loaded by Platformio due to framework definition) are always compiled
-; with the ones located inside this repository:
-; file 1 (the Startup code, but we want to use our own Startup code file called "startup_stm32f10x.c"):
-;
-; To get my startup code to run I had to create a new framework called "cmsis-gadgetangel". It is exactly like the ST's framework "cmsis" except I delete the startup_stm32f100xb.s files so that
-; the compiler would use my startup_stm32f10x.c file instead!!
-;
-; startup_stm32f100xb.s --assembler code, located at: for windows: "c:\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc"
-; startup_stm32f100xb.s --assembler code, located at: for linux: "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc"
-;
-; file 2 this file is still used by the project:
-; system_stm32f1xx.c -- c code, located at: for windows: "c:\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates"
-; system_stm32f1xx.c -- c code, located at: for linux: "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates"
-;
 ; for Linux and Windows:
 lib_deps  =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod = https://github.com/GadgetAngel/STM32F10x_StdPeriph_Lib_V3.5.0_mod.git
 lib_ignore =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod
-default_src_filter  = +<*> -<Demo> -<BlinkingLight> -<Library> +<.pio/libdeps/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod> -<.pio/libdeps/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport>
+default_src_filter  = +<*> -<Demo> -<BlinkingLight> +<Blinking_Light2> -<Library> +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod> -<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
@@ -75,13 +56,11 @@ build_flags =
     ;
     ;for Windows 10:
     ; for stm32f10x.h file:
-    -I".pio/libdeps/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
+    -I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x"
     ; for core_cm3.c and core_cm3.h:
-    ;-I"\.pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport"
-    ; for other modules.h files that might need to be accessed later:
-    -I".pio/libdeps/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/inc"
+    ;-I".pio/libdeps/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport"
     ; for other modules.c files that might need to be accessed later:
-    -I".pio/libdeps/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src"
+    -I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver"
     ;
     ; for BOTH Linux and Windows 10:
     -DSTM32F10X_MD_VL
@@ -96,9 +75,9 @@ build_flags =
     ;
     ;for Windows 10:
     ; for other modules that might need to be accessed later:
-    ;-I".\Library\ff9\src"
+    ;-I"./Library/ff9/src"
     ; for other modules that might need to be accessed later:
-    ;-I".\Library"
+    ;-I"./Library"
     ;
     ; for BOTH Linux and Windows 10:
 
@@ -106,23 +85,11 @@ build_flags =
 platform                = ststm32
 board                   = disco_f100rb
 framework               = cmsis
-;framework               = cmsis-gadgetangel
 board_build.mcu         = stm32f100rbt6
 lib_compat_mode         = off
-;lib_deps = src_filter = +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc\stm32f10x_rcc.h> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc\stm32f10x_gpio.h> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\src\stm32f10x.rcc.c> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\src\stm32f10x_gpio.c>
 ;This projects link script file (.ld) for STM32F100RBT6
 board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
-;
-;default link scripts (.ld) for this board are located here (these are just comments only, use board_build.ldscript above):
-; for Linux:
-;board_build.ldscript = "/home/joann/.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/linker/STM32F100XB_FLASH.ld"
-;board_build.ldscript = "/home/joann/.platformio/packages/tool-ldscripts-ststm32/stm32f1/STM32F100RBHX_FLASH.ld"
-; for Windows 10:
-;board_build.ldscript = "c:\users\joann\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\gcc\linker\STM32F100XB_FLASH.ld"
-;board_build.ldscript = "c:\users\joann\.platformio\packages\tool-ldscripts-ststm32\stm32f1\STM32F100RBHX_FLASH.ld"
 
-
-;+<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc\stm32f10x_rcc.h> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\inc\stm32f10x_gpio.h> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\src\stm32f10x.rcc.c> +<..\..\Users\joann\download_sw\STM32F10x_StdPeriph_Lib_V3.5.0\Libraries\STM32F10x_StdPeriph_Driver\src\stm32f10x_gpio.c>
 build_flags             = ${common.build_flags}
 src_filter              = ${common.default_src_filter}
 lib_deps                = ${common.lib_deps}
