--- a/platformio.ini
+++ b/platformio.ini
@@ -11,13 +11,17 @@
 #
 [platformio]
 src_dir         = .
+libdeps_dir     = .pio
+default_envs    = disco_f100rb
 ;for Demo
 ;build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
-build_dir       = Blinking_Light2_Build
-default_envs    = disco_f100rb
+;build_dir       = Blinking_Light2_Build
+;for Blinking_Light3
+build_dir       = Blinking_Light3_Build
+
 
 [common]
 ; for Linux and Windows:
@@ -25,7 +29,17 @@ lib_deps  =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod = https://github.com/GadgetAngel/STM32F10x_StdPeriph_Lib_V3.5.0_mod.git
 lib_ignore =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod
-default_src_filter  = +<*> -<include> -<Demo> -<BlinkingLight> +<Blinking_Light2> -<Library> +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod> -<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
+default_src_filter  =
+    +<*>
+    +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
+    +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
+    +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
+    -<include> -<Library>
+    -<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
+    -<Demo>
+    -<BlinkingLight>
+    -<Blinking_Light2>
+    +<Blinking_Light3>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
@@ -38,6 +52,7 @@ build_flags =
     ;Blinking_Light2
     -O0
     -g
+    -ggdb
     ; the next statement are automatically added by Platformio via "../.platformio/platforms/ststm32/boards/disco_f100rb.json" file
     ;;-mcpu=cortex-m3 -mthumb
     ;
@@ -56,11 +71,11 @@ build_flags =
     ;
     ;for Windows 10:
     ; for stm32f10x.h file:
-    -I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x"
+    ;-I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x"
     ; for core_cm3.c and core_cm3.h:
-    ;-I".pio/libdeps/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport"
+    ;-I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport"
     ; for other modules.c files that might need to be accessed later:
-    -I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver"
+    ;-I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver"
     ;
     ; for BOTH Linux and Windows 10:
     -DSTM32F10X_MD_VL
@@ -69,15 +84,15 @@ build_flags =
     ;
     ;for Linux:
     ; for other modules that might need to be accessed later:
-    ;-I"./Library/ff9/src"
+    ;-I"Library/ff9/src"
     ; for other modules that might need to be accessed later:
-    ;-I"./Library"
+    ;-I"Library"
     ;
     ;for Windows 10:
     ; for other modules that might need to be accessed later:
-    ;-I"./Library/ff9/src"
+    ;-I"Library\ff9\src"
     ; for other modules that might need to be accessed later:
-    ;-I"./Library"
+    ;-I"Library"
     ;
     ; for BOTH Linux and Windows 10:
 
@@ -86,6 +101,7 @@ platform                = ststm32
 board                   = disco_f100rb
 framework               = cmsis
 board_build.mcu         = stm32f100rbt6
+lib_ldf_mode            = off
 lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32F100RBT6
 board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
