fixed reference issue

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,11 +31,11 @@ lib_ignore =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod
 default_src_filter  =
     +<*>
-    +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
-    +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
-    +<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
+    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
+    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
+    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
     -<include> -<Library>
-    -<.pio\libdeps\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
+    -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
     -<Demo>
     -<BlinkingLight>
     -<Blinking_Light2>
@@ -56,7 +56,7 @@ build_flags =
     ; the next statement are automatically added by Platformio via "../.platformio/platforms/ststm32/boards/disco_f100rb.json" file
     ;;-mcpu=cortex-m3 -mthumb
     ;
-    -I"."
+    ;-I"."
     ;;;-I".."  -- might not be needed
     ;
     ;for Linux:
@@ -71,11 +71,11 @@ build_flags =
     ;
     ;for Windows 10:
     ; for stm32f10x.h file:
-    ;-I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x"
+    ;-I".pio/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
     ; for core_cm3.c and core_cm3.h:
-    ;-I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport"
+    ;-I".pio/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport"
     ; for other modules.c files that might need to be accessed later:
-    ;-I".pio\libdeps\disco_fl00rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver"
+    ;-I".pio/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver"
     ;
     ; for BOTH Linux and Windows 10:
     -DSTM32F10X_MD_VL
