updated platformio.ini file

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,33 +49,13 @@ build_flags =
     -fmax-errors=5
     ;for BlinkingLight & Demo
     ;-O1
-    ;Blinking_Light2
+    ;for all other main.c programs except Demo
     -O0
+    ; for all mainc.c progrms
     -g
     -ggdb
     ; the next statement are automatically added by Platformio via "../.platformio/platforms/ststm32/boards/disco_f100rb.json" file
     ;;-mcpu=cortex-m3 -mthumb
-    ;
-    ;-I"."
-    ;;;-I".."  -- might not be needed
-    ;
-    ;for Linux:
-    ; for stm32f10x.h file:
-    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
-    ; for core_cm3.c and core_cm3.h:
-    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/CoreSupport"
-    ; for other modules.h files that might need to be accessed later:
-    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/inc"
-    ; for other modules.c files that might need to be accessed later:
-    ;-I"/home/joann/Arm/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/src"
-    ;
-    ;for Windows 10:
-    ; for stm32f10x.h file:
-    ;-I".pio/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
-    ; for core_cm3.c and core_cm3.h:
-    ;-I".pio/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport"
-    ; for other modules.c files that might need to be accessed later:
-    ;-I".pio/disco_fl00rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver"
     ;
     ; for BOTH Linux and Windows 10:
     -DSTM32F10X_MD_VL
