--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 [platformio]
 src_dir         = .
 libdeps_dir     = .pio
+;f100rb ia a medium-density value line for f100xx MCU
 default_envs    = disco_f100rb
 ;for Demo
 ;build_dir       = Demo_Build
