Added next project Button_Light

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,9 @@ default_envs    = disco_f100rb
 ;for Blinking_Light2
 ;build_dir       = Blinking_Light2_Build
 ;for Blinking_Light3
-build_dir       = Blinking_Light3_Build
+;build_dir       = Blinking_Light3_Build
+;for Button_Light
+build_dir       = Button_Light_Build
 
 
 [common]
@@ -34,13 +36,14 @@ default_src_filter  =
     +<*>
     +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
     +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
-    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
+    -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
     -<include> -<Library>
     -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
     -<Demo>
     -<BlinkingLight>
     -<Blinking_Light2>
-    +<Blinking_Light3>
+    -<Blinking_Light3>
+    +<Button_Light>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
