--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ default_src_filter  =
     +<*>
     +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
     +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
+    ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
     -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
     -<include> -<Library>
     -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
