--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@
 [platformio]
 src_dir         = .
 libdeps_dir     = .pio
-;f100rb ia a medium-density value line for f100xx MCU
+;f100rb ia a medium-density value line for f100xx MCU use to run code
 default_envs    = disco_f100rb
+;USE for DEBUGGING
+;default_envs    = debug
 ;for Demo
 ;build_dir       = Demo_Build
 ;for BlinkingLight
@@ -23,7 +25,8 @@ default_envs    = disco_f100rb
 ;for Blinking_Light3
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
-build_dir       = Button_Light_Build
+;build_dir       = Button_Light_Build
+build_dir      = Button_Light_Build_Debug
 
 
 [common]
@@ -52,13 +55,14 @@ default_src_filter  =
 ;   for LINUX only enable (un-comment) the ones listed for Linux and disable (comment out) the ones listed for Windows
 build_flags =
     -fmax-errors=5
+    ;-DSTM32F10X_MD_VL
     ;for BlinkingLight & Demo
     ;-O1
     ;for all other main.c programs except Demo
     -O0
     ; for all mainc.c progrms
-    -g
-    -ggdb
+    -g3
+    -ggdb3
     ; the next statement are automatically added by Platformio via "../.platformio/platforms/ststm32/boards/disco_f100rb.json" file
     ;;-mcpu=cortex-m3 -mthumb
     ;
@@ -105,3 +109,12 @@ upload_protocol         = custom
 ;
 ;For Windows using stlink V1.6.0:
 upload_command          = st-flash write $SOURCE 0x08000000
+
+;debug_tool              = stlink
+;debug_svd_path          = C:\Users\joann\.platformio\platforms\ststm32\misc\svd\STM32F100xx.svd
+;debug_port              = localhost:3333
+
+;;debug_init_break        = break button
+;debug_init_cmds         =
+;  target extended-remote $DEBUG_PORT
+;  $INIT_BREAK
