recompiled on Linux Machine

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,6 @@ src_dir         = .
 libdeps_dir     = .pio
 ;f100rb ia a medium-density value line for f100xx MCU use to run code
 default_envs    = disco_f100rb
-;USE for DEBUGGING
-;default_envs    = debug
 ;for Demo
 ;build_dir       = Demo_Build
 ;for BlinkingLight
@@ -25,9 +23,7 @@ default_envs    = disco_f100rb
 ;for Blinking_Light3
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
-;build_dir       = Button_Light_Build
-build_dir      = Button_Light_Build_Debug
-
+build_dir       = Button_Light_Build
 
 [common]
 ; for Linux and Windows:
@@ -40,7 +36,7 @@ default_src_filter  =
     +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
     +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
     ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
-    -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
+    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
     -<include> -<Library>
     -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
     -<Demo>
@@ -109,12 +105,3 @@ upload_protocol         = custom
 ;
 ;For Windows using stlink V1.6.0:
 upload_command          = st-flash write $SOURCE 0x08000000
-
-;debug_tool              = stlink
-;debug_svd_path          = C:\Users\joann\.platformio\platforms\ststm32\misc\svd\STM32F100xx.svd
-;debug_port              = localhost:3333
-
-;;debug_init_break        = break button
-;debug_init_cmds         =
-;  target extended-remote $DEBUG_PORT
-;  $INIT_BREAK
