recompiled on Windows

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,9 @@ default_envs    = disco_f100rb
 ;for Blinking_Light2
 ;build_dir       = Blinking_Light2_Build
 ;for Blinking_Light3
-;build_dir       = Blinking_Light3_Build
+build_dir       = Blinking_Light3_Build
 ;for Button_Light
-build_dir       = Button_Light_Build
+;build_dir       = Button_Light_Build
 
 [common]
 ; for Linux and Windows:
@@ -33,17 +33,17 @@ lib_ignore =
     STM32F10x_StdPeriph_Lib_V3.5.0_mod
 default_src_filter  =
     +<*>
-    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod>
-    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x>
+    +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod>
+    +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x>
     ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
-    +<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\STM32F10x_StdPeriph_Driver>
+    +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver>
     -<include> -<Library>
-    -<.pio\disco_f100rb\STM32F10x_StdPeriph_Lib_V3.5.0_mod\Libraries\CMSIS\CM3\CoreSupport>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport>
     -<Demo>
     -<BlinkingLight>
     -<Blinking_Light2>
-    -<Blinking_Light3>
-    +<Button_Light>
+    +<Blinking_Light3>
+    -<Button_Light>
 ;
 ; For Both Linux and Windows 10:
 ; FOR THE "build_flags=" ONLY enable the set of -I (include paths for the OS you are on)
@@ -67,20 +67,12 @@ build_flags =
     -DUSE_STDPERIPH_DRIVER
     -DUSE_FULL_ASSERT
     ;
-    ;for Linux:
+    ;for Both Windows and Linux:
     ; for other modules that might need to be accessed later:
     ;-I"Library/ff9/src"
     ; for other modules that might need to be accessed later:
     ;-I"Library"
-    ;
-    ;for Windows 10:
-    ; for other modules that might need to be accessed later:
-    ;-I"Library\ff9\src"
-    ; for other modules that might need to be accessed later:
-    ;-I"Library"
-    ;
     ; for BOTH Linux and Windows 10:
-
 [env:disco_f100rb]
 platform                = ststm32
 board                   = disco_f100rb
@@ -96,12 +88,6 @@ src_filter              = ${common.default_src_filter}
 lib_deps                = ${common.lib_deps}
 
 upload_protocol         = custom
-;ENABLE ONLY ONE upload_protocol
-;for linux:
-;upload_command          = st-flash write $SOURCE 0x08000000
-;
-;For Windows using ST-LINK_cli from STelectronics:
-;upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
-;
-;For Windows using stlink V1.6.0:
+
+;For Windows and Linux using stlink V1.6.0:
 upload_command          = st-flash write $SOURCE 0x08000000
