changing Debug setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,9 @@ default_envs    = disco_f100rb
 ;for Blinking_Light2
 ;build_dir       = Blinking_Light2_Build
 ;for Blinking_Light3
-build_dir       = Blinking_Light3_Build
+;build_dir       = Blinking_Light3_Build
 ;for Button_Light
-;build_dir       = Button_Light_Build
+build_dir       = Button_Light_Build
 
 [common]
 ; for Linux and Windows:
@@ -36,14 +36,14 @@ default_src_filter  =
     +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod>
     +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x>
     ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
-    +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver>
     -<include> -<Library>
     -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport>
     -<Demo>
     -<BlinkingLight>
     -<Blinking_Light2>
-    +<Blinking_Light3>
-    -<Button_Light>
+    -<Blinking_Light3>
+    +<Button_Light>
 ;
 ; For Both Linux and Windows 10:
 build_flags =
@@ -54,8 +54,8 @@ build_flags =
     ;for all other main.c programs except Demo
     -O0
     ; for all mainc.c progrms
-    -g3
-    -ggdb3
+    -g
+    -ggdb
     ; the next statement are automatically added by Platformio via "../.platformio/platforms/ststm32/boards/disco_f100rb.json" file
     ;;-mcpu=cortex-m3 -mthumb
     ;
@@ -89,3 +89,21 @@ upload_protocol         = custom
 
 ;For Windows and Linux using stlink V1.6.0:
 upload_command          = st-flash write $SOURCE 0x08000000
+
+;Debug setup
+debug_tool              = stlink
+;https://gcc.gnu.org/onlinedocs/gcc/Debugging-Options.html for gcc options
+debug_build_flags       = -fmax-errors=5 -DSTM32F10X_MD_VL -DUSE_STDPERIPH_DRIVER -DUSE_FULL_ASSERT -O0 -g3 -ggdb3
+debug_init_break        = break main.c:71 if button_value = 1
+debug_port              = localhost:3333
+debug_load_mode         = always
+debug_load_cmds         = load
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  $INIT_BREAK
+  monitor reset halt
+  $LOAD_CMDS
+  monitor init
+  monitor reset halt
+  interrupt
+  continue
