--- a/platformio.ini
+++ b/platformio.ini
@@ -34,11 +34,18 @@ lib_ignore =
 default_src_filter  =
     +<*>
     +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod>
-    +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x>
-    ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
-    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver>
-    -<include> -<Library>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/Documentation>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/_htmresc>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src>
+    -<include>
+    ;
     -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport>
+    ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c>
+    -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c>
+    -<Library>
     -<Demo>
     -<BlinkingLight>
     -<Blinking_Light2>
@@ -56,6 +63,10 @@ build_flags =
     -DSTM32F10X_MD_VL
     -DUSE_STDPERIPH_DRIVER
     -DUSE_FULL_ASSERT
+    ;
+    -I".pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
+    -I"."
+    -I".pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/inc"
     ;
     ;for Both Windows and Linux:
     ; for other modules that might need to be accessed later:
@@ -77,6 +88,7 @@ board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
 build_flags             = ${common.build_flags}
 src_filter              = ${common.default_src_filter}
 lib_deps                = ${common.lib_deps}
+lib_archive             = no
 
 upload_protocol         = custom
 
