--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 [platformio]
 src_dir         = .
 ;for Demo
-;build_dir       = Demo_Build
+build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
@@ -20,7 +20,7 @@ src_dir         = .
 ;for Blinking_Light3
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
-build_dir       = Button_Light_Build
+;build_dir       = Button_Light_Build
 libdeps_dir     = .pio
 ;f100rb ia a medium-density value line for f100xx MCU use to run code
 default_envs    = disco_f100rb
@@ -46,11 +46,11 @@ default_src_filter  =
     -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c>
     -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c>
     -<Library>
-    -<Demo>
+    +<Demo>
     -<BlinkingLight>
     -<Blinking_Light2>
     -<Blinking_Light3>
-    +<Button_Light>
+    -<Button_Light>
 ;
 ; For Both Linux and Windows 10:
 build_flags =
