Added support for STM32F4 for Button_Light program

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ libdeps_dir     = .pio
 default_envs    = disco_f407vg
 ;
 ;for Demo
-build_dir       = Demo_Build
+;build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
@@ -25,7 +25,7 @@ build_dir       = Demo_Build
 ;for Blinking_Light3
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
-;build_dir       = Button_Light_Build
+build_dir       = Button_Light_Build
 #
 #
 #
@@ -86,11 +86,11 @@ src_filter              = ${common.default_src_filter}
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c>
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c>
                             -<Library>
-                            -<Demo>
+                            +<Demo>
                             -<BlinkingLight>
                             -<Blinking_Light2>
                             -<Blinking_Light3>
-                            +<Button_Light>
+                            -<Button_Light>
 lib_deps                = STM32F10x_StdPeriph_Lib_V3.5.0_mod = https://github.com/GadgetAngel/STM32F10x_StdPeriph_Lib_V3.5.0_mod.git
 lib_ignore              = STM32F10x_StdPeriph_Lib_V3.5.0_mod
 lib_archive             = no
@@ -114,7 +114,7 @@ debug_tool              = stlink
 ;debug_init_break        = break main.c:74 if button_value = 1
 debug_port              = localhost:3333
 debug_load_mode         = always
-debug_load_cmds         = load
+debug_load_cmds         = preload
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
   $INIT_BREAK
@@ -168,11 +168,11 @@ src_filter              = ${common.default_src_filter}
                             -<.pio/disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/STM32F4xx_StdPeriph_Driverr/src/stm32f4xx_rcc.c>
                             -<.pio/disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_usart.c>
                             -<Library>
-                            +<Demo>
+                            -<Demo>
                             -<BlinkingLight>
                             -<Blinking_Light2>
                             -<Blinking_Light3>
-                            -<Button_Light>
+                            +<Button_Light>
 lib_deps                = STM32F4xx_StdPeriph_Lib_V1.8.0_mod = https://github.com/GadgetAngel/STM32F4xx_StdPeriph_Lib_V1.8.0_mod.git
 lib_ignore              = STM32F4xx_StdPeriph_Lib_V1.8.0_mod
 lib_archive             = no
@@ -185,7 +185,7 @@ upload_command          = st-flash write $SOURCE 0x08000000
 ;Debug setup
 debug_tool              = stlink
 ;for Demo
-debug_init_break        = break inc if i > 40
+;debug_init_break        = break inc if i > 100
 ;for BlinkingLight
 ;debug_init_break        = break inc if n > 40
 ;for Blinking_Light2
@@ -193,16 +193,17 @@ debug_init_break        = break inc if i > 40
 ;for Blinking_Light3
 ;debug_init_break        = break inc if ledval > 40
 ;for Button_Light
-;debug_init_break        = break main.c:74 if button_value = 1
-debug_port              = localhost:3333
-debug_load_mode         = always
-debug_load_cmds         = load
-debug_init_cmds =
-  target extended-remote $DEBUG_PORT
-  $INIT_BREAK
-  monitor reset halt
-  $LOAD_CMDS
-  monitor init
-  monitor reset halt
-  interrupt
-  continue
+;debug_init_break        = break main.c:142 if button_value = 1
+;debug_port              = localhost:3333
+;debug_load_mode         = always
+;debug_load_cmds         = preload
+;debug_load_cmds         = load
+;debug_init_cmds =
+  ;target extended-remote $DEBUG_PORT
+  ;$INIT_BREAK
+  ;monitor reset halt
+  ;$LOAD_CMDS
+  ;monitor init
+  ;monitor reset halt
+  ;interrupt
+  ;continue
